// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dialog add rootClassName and rootStyle should render correct 1`] = `
<div
  class="rc-dialog-root customize-root-class"
  style="font-size: 20px;"
>
  <div
    class="rc-dialog-mask"
  />
  <div
    class="rc-dialog-wrap"
    style="font-size: 10px;"
  >
    <div
      aria-modal="true"
      class="rc-dialog"
      role="dialog"
      style="width: 600px; height: 903px;"
      tabindex="-1"
    >
      <div
        class="rc-dialog-container"
      >
        <button
          aria-label="Close"
          class="rc-dialog-close"
          type="button"
        >
          <span
            class="rc-dialog-close-x"
          />
        </button>
        <div
          class="rc-dialog-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`dialog should render correct 1`] = `
<div
  class="rc-dialog-root"
>
  <div
    class="rc-dialog-mask"
  />
  <div
    class="rc-dialog-wrap"
  >
    <div
      aria-labelledby="test-id"
      aria-modal="true"
      class="rc-dialog"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="rc-dialog-container"
      >
        <button
          aria-label="Close"
          class="rc-dialog-close"
          type="button"
        >
          <span
            class="rc-dialog-close-x"
          />
        </button>
        <div
          class="rc-dialog-header"
        >
          <div
            class="rc-dialog-title"
            id="test-id"
          >
            Default
          </div>
        </div>
        <div
          class="rc-dialog-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`dialog should support classNames 1`] = `
<div
  class="rc-dialog-root"
>
  <div
    class="rc-dialog-mask custom-mask"
  />
  <div
    class="rc-dialog-wrap custom-wrapper"
  >
    <div
      aria-labelledby="test-id"
      aria-modal="true"
      class="rc-dialog"
      role="dialog"
      style="width: 600px; height: 903px;"
      tabindex="-1"
    >
      <div
        class="rc-dialog-container custom-container"
      >
        <button
          aria-label="Close"
          class="rc-dialog-close"
          type="button"
        >
          <span
            class="rc-dialog-close-x"
          />
        </button>
        <div
          class="rc-dialog-header custom-header"
        >
          <div
            class="rc-dialog-title"
            id="test-id"
          >
            Default
          </div>
        </div>
        <div
          class="rc-dialog-body custom-body"
        />
        <div
          class="rc-dialog-footer custom-footer"
        >
          Footer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`dialog should support styles 1`] = `
<div
  class="rc-dialog-root"
>
  <div
    class="rc-dialog-mask"
    style="background: yellow;"
  />
  <div
    class="rc-dialog-wrap"
    style="background: pink;"
  >
    <div
      aria-labelledby="test-id"
      aria-modal="true"
      class="rc-dialog"
      role="dialog"
      style="width: 600px; height: 903px;"
      tabindex="-1"
    >
      <div
        class="rc-dialog-container"
        style="background: orange;"
      >
        <button
          aria-label="Close"
          class="rc-dialog-close"
          type="button"
        >
          <span
            class="rc-dialog-close-x"
          />
        </button>
        <div
          class="rc-dialog-header"
          style="background: red;"
        >
          <div
            class="rc-dialog-title"
            id="test-id"
            style="background: orange;"
          >
            Default
          </div>
        </div>
        <div
          class="rc-dialog-body"
          style="background: green;"
        />
        <div
          class="rc-dialog-footer"
          style="background: blue;"
        >
          Footer
        </div>
      </div>
    </div>
  </div>
</div>
`;
